worked some more, next up will be to embed a youtubesearch for the artist and song

--- a/index.htm
+++ b/index.htm
@@ -7,18 +7,21 @@
 
 <body>
 <form method="post" action="spotify-upload.php">
-	<table>
+	<h3>Enter the song HTTP link below!</h3>
+	<p>In Spotify select the song you want to add and right-click and select "Copy HTTP Link".</p>
+
+<table>
 	<tr>
 		<td>
 		    <input type="text" name="spotify_url"/>
-    </td>
+    		</td>
 	</tr>
-  <tr>
+  	<tr>
 		<td>
 			<input name="Submit" type="submit" value="testa!"/>
 		</td>
 	</tr>
-	</table>   
+</table>   
 </form>
 </body>
 </html>
