seems a little bit better now. translated the last part

--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 	</tr>
   	<tr>
 		<td>
-			<input name="Submit" type="submit" value="testa!"/>
+			<input name="Submit" type="submit" value="try it!"/>
 		</td>
 	</tr>
 </table>   
