some work done, still not working

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
   <title> spotify-link get song script</title>
 </head>
 
-<body>
+<body> 
 <form method="post" action="spotify-upload.php">
 	<h3>Enter the song HTTP link below!</h3>
 	<p>In Spotify select the song you want to add and right-click and select "Copy HTTP Link".</p>
@@ -13,7 +13,7 @@
 <table>
 	<tr>
 		<td>
-		    <input type="text" name="spotify_url"/>
+		    <input type="text" name="spotify_url" size="45"/>
     		</td>
 	</tr>
   	<tr>
